Controllers,Exceptions, UTils and Services updated

--- a/Gatekeeper-backend/src/main/resources/application.properties
+++ b/Gatekeeper-backend/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 #whether to enable logging of sql statements .
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.general-statistics=true
+spring.mvc.static-path-pattern=/content/**
+spring.web.resources.static-location=file:/tmp/images
+
+image.upload.home = /tmp/images
+static.domain.name = https://localhost:8080/
