--- a/Gatekeeper-backend/pom.xml
+++ b/Gatekeeper-backend/pom.xml
@@ -54,6 +54,11 @@
 			<version>1.10.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
