--- a/Gatekeeper-backend/src/main/resources/application.properties
+++ b/Gatekeeper-backend/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.web.resources.static-location=file:/tmp/images
 
 image.upload.home = /tmp/images
 static.domain.name = https://localhost:8080/
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.session.store-type=redis
